manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniorest-service
spec:
  selector:
    app: miniorest
  ports:
  - protocol: TCP
    port: 9080
