manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: miniorest
spec:
  to:
    kind: Service
    name: miniorest-service
